--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container-fluid">
             <div class="row mx-5 pb-3">
                 <div class="col-md-10">
-                    <h4>Kursus Pilihan</h4>
+                    <h4>Kelas Pilihan</h4>
                 </div>
                 <div class="dropdown col-md-2">
                     <a class="btn btn-light dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -127,7 +127,7 @@
                     <div class="card">
                         <img src="img/kursus4.jpg" class="card-img-top p-1" alt="...">
                         <div class="card-body">
-                            <p class="lead a" >Web Development</p>
+                            <p class="lead a">Web Development</p>
                             <h5 class="card-title mb-3">Full-Stack Web Development</h5>
                             <p>Pelajari teknik-teknik untuk membangun website secara end-to-end.</p>
                             <p></p>
@@ -200,22 +200,26 @@
             <div class="col">
                 <img src="img/icon1.png" style="width: 100px;" class="rounded-circle img-thumbnail" alt="">
                 <p>Materi Lengkap</p>
-                <p class="lead b">Kursus kami menawarkan materi yang <br> komprehensif dan terstruktur dengan <br> baik, sehingga peserta dapat <br> memahami topik dengan baik.</p>
+                <p class="lead b">Kursus kami menawarkan materi yang <br> komprehensif dan terstruktur dengan <br> baik,
+                    sehingga peserta dapat <br> memahami topik dengan baik.</p>
             </div>
             <div class="col">
                 <img src="img/icon2.png" style="width: 100px;" class="rounded-circle img-thumbnail" alt="">
                 <p>Pembelajaran Fleksibel</p>
-                <p class="lead b">Peserta dapat memilih kapan dan di mana <br> mereka ingin belajar sehingga mereka <br> dapat belajar sesuai dengan jadwal <br> dan preferensi sendiri.</p>
+                <p class="lead b">Peserta dapat memilih kapan dan di mana <br> mereka ingin belajar sehingga mereka <br>
+                    dapat belajar sesuai dengan jadwal <br> dan preferensi sendiri.</p>
             </div>
             <div class="col">
                 <img src="img/icon3.png" style="width: 100px;" class="rounded-circle img-thumbnail" alt="">
                 <p>Belajar Dengan Ahli</p>
-                <p class="lead b">Materi kami disusun oleh para ahli di bidangnya <br> sehingga peserta dapat mempelajari konten <br> yang berkualitas dan sesuai dengan <br> standar industri.</p>
+                <p class="lead b">Materi kami disusun oleh para ahli di bidangnya <br> sehingga peserta dapat
+                    mempelajari konten <br> yang berkualitas dan sesuai dengan <br> standar industri.</p>
             </div>
             <div class="col">
                 <img src="img/icon4.png" style="width: 100px;" class="rounded-circle img-thumbnail" alt="">
                 <p>Akses Sepuasnya</p>
-                <p class="lead b">Peserta dapat mengakses materi kursus <br> online kami sebanyak yang mereka <br> inginkan, bahkan setelah <br> kursus selesai.</p>
+                <p class="lead b">Peserta dapat mengakses materi kursus <br> online kami sebanyak yang mereka <br>
+                    inginkan, bahkan setelah <br> kursus selesai.</p>
             </div>
         </div>
     </section>
@@ -227,19 +231,9 @@
                 <li>Tentang</li>
                 <li>Karier</li>
                 <li>Hubungi Kami</li>
-              </ul>
+            </ul>
         </div>
-      </footer>
-
-
-    <!--<footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-        <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-            <div class="row">
-                <h2>COnlin</h2>
-            </div>
-        </div>
-    </footer>-->
-
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
