--- a/portopolio.html
+++ b/portopolio.html
@@ -69,7 +69,7 @@
                         </tr>
                         <tr>
                             <td>Usia</td>
-                            <td>: 19</td>
+                            <td>: 19 Tahun</td>
                         </tr>
                         <tr>
                             <td>Lokasi</td>
